--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 									My name is Everson Spinola, 28 years old. I'm Brazilian and currently living in Ireland. Back in Brazil I worked as a <u>Graphic Designer for 5 years</u>. I moved to Ireland in order to study English and IT.
 								</p>
 								<p style="text-align: justify; text-justify: inter-word;">
-									I have been willing to switch careers from Graphic Designer to Java Developer. The 
-									development of applications also requires designing skills which makes my career 
-									transition easier.
+									I have been willing to switch careers from Graphic Designer to Java Developer or other entry level IT job. 
+									The development of applications also requires designing skills which makes my career transition easier.
 								</p>
 								<p style="text-align: justify; text-justify: inter-word;">
-									Currently I am a 3rd year student in Bachelor of Science in Information Technology 
-									at CCT College. I have been learning and creating projects for the college using the following programming languages/technologies Java, SQL, NoSQL, HTML, CSS, PHP, Java Script, JSON, XML, MongoDB, Google Cloud among others.
+									Currently, I just graduated in Bachelor of Science in Information Technology at CCT College. 
+									I have learned how to create projects for the College using the following programming languages/technologies; 
+									Java, SQL, NoSQL(MongoDB), HTML, CSS, PHP, Java Script, JSON, XML, Google Cloud among others.
 								</p>
 								<p>
 									Thank you for your time to get to know a little about me! <br><br>By the way, check out my <a href="#work">awesome work.</a>
