Deleted from index.html doubled method attribute

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="MAILTO:everson_spinola@hotmail.com" method="GET" enctype="text/plain">
+								<form method="GET" action="MAILTO:everson_spinola@hotmail.com" enctype="text/plain">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
