--- a/index.html
+++ b/index.html
@@ -45,21 +45,19 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic011.jpg" alt="" /></span>
-								<!-- <p style="text-align: center;">
-									<strong>Name: </strong>Everson Spinola &nbsp &nbsp &nbsp | &nbsp &nbsp &nbsp <strong>Age: </strong>26 &nbsp &nbsp &nbsp | &nbsp &nbsp &nbsp <strong>Nationality: </strong>Brazilian
-								</p> -->
+								
 								
 								<p style="text-align: justify; text-justify: inter-word;">
-									My name is Everson Spinola, 28 years old. I'm Brazilian and currently living in Ireland. Back in Brazil I worked as a <u>Graphic Designer for 5 years</u>. I moved to Ireland in order to study English and IT.
+									My name is Everson Spinola, 29 years old, Brazilian national, currently living in Dublin, Ireland, stamp 4 holder. Back in Brazil I worked as a Graphic Designer for 5 years. 
+									I moved to Ireland in order to study English and IT. Graduated in BSIT November, 2022. Recently got ITIL 4 certified and Studying to get AWS Cloud Practitioner certified soon.
 								</p>
 								<p style="text-align: justify; text-justify: inter-word;">
-									I have been willing to switch careers from Graphic Designer to Java Developer or other entry level IT job. 
+									I have been willing to switch careers from Graphic Designer to Java Developer or other entry level IT jobs. 
 									The development of applications also requires designing skills which makes my career transition easier.
 								</p>
 								<p style="text-align: justify; text-justify: inter-word;">
-									Currently, I just graduated in Bachelor of Science in Information Technology at CCT College. 
-									I have learned how to create projects for the College using the following programming languages/technologies; 
-									Java, SQL, NoSQL(MongoDB), HTML, CSS, PHP, Java Script, JSON, XML, Google Cloud among others.
+									I have learned how to create projects in the College using the following programming languages/technologies; 
+									Java, SQL, NoSQL(MongoDB), HTML, CSS, PHP, JavaScript, JSON, XML, Google Cloud, AWS, among others.
 								</p>
 								<p>
 									Thank you for your time to get to know a little about me! <br><br>By the way, check out my <a href="#work">awesome work.</a>
