Updated age at index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								
 								
 								<p style="text-align: justify; text-justify: inter-word;">
-									Hello, I’m Everson Spinola, a 29-year-old Brazilian currently residing in Dublin, Ireland. I hold a Stamp 4 visa. 
+									Hello, I’m Everson Spinola, 30 years old, currently residing in Dublin, Ireland. I hold a Stamp 4 visa. 
 									My professional journey began in Brazil where I spent five years honing my skills as a Graphic Designer.
 									Seeking to expand my horizons, I moved to Ireland to pursue studies in English and Information Technology. 
 									I successfully graduated with a Bachelor of Science in IT in November 2022. Recently, I achieved ITIL 4 certification and am currently preparing for the AWS Cloud Practitioner certification. 
