--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Everson Spinola</title>
+		<title>Everson Spinola Git CV</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -44,7 +44,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic011.jpg" alt="" /></span>
+								<span class="image main"><img src="images/pic011.jpg" alt="Hello" /></span>
 								
 								
 								<p style="text-align: justify; text-justify: inter-word;">
