--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 								</p>
 
 								<p></p>Intuitive banking application software.
-								<span class="image Econo Bank Snippet"><img src="images/Econo_Bank_Snippet_Png.png" alt="Econo Bank Snippet" /></span>
+								<span class="image main Econo Bank Snippet"><img src="images/Econo_Bank_Snippet_Png.png" alt="Econo Bank Snippet" /></span>
 								
 								<p  style="text-align: justify; text-justify: inter-word;">
 									Econo Bank is a banking application that supports essential banking operations such as withdraw, deposit, transfer, 
