--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
 								<p  style="text-align: justify; text-justify: inter-word;">
 									Econo Bank is a banking application that supports essential banking operations such as withdraw, deposit, transfer, 
 									balance check and statement history visualization. The application includes sign-up and sign-in, account information editing, and account recovery features.
-									
+								</p>
+
+								<p  style="text-align: justify; text-justify: inter-word;">
 									It was developed in Java, featuring a JavaFX Graphic User Interface (GUI) with design elements created in Corel Draw. 
 									This project utilized Maven as the build automation tool for project management and dependency management and was built using the Model-View-Controller (MVC) 
 									architectural pattern, and to enhance safety it's using encapsulation with strict access modifiers. 
