--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-user"></span>
+							<!--<span class="icon fa-user"></span>-->
+							<img src="Everson_Spinola_Profile_Picture.jpg" alt="Profile Picture">
 						</div>
 						<div class="content">
 							<div class="inner">
