--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 									I’m excited about the opportunities these certifications will open up in my career.
 								</p>
 								<p style="text-align: justify; text-justify: inter-word;">
-									I’m currently eager to transition from my role as a Graphic Designer to a Java Developer or other entry-level IT positions. 
-									My background in design is a valuable asset in application development, where design skills often play a crucial role.
+									I’m currently eager to transition from my role as a Graphic Designer to a Java Developer or other IT positions. 
+									My background in design is a valuable asset in application development, where designing skills often play a crucial role in front-end development.
 								</p>
 								<p style="text-align: justify; text-justify: inter-word;">
 									During my college years, I acquired experience in creating projects using a variety of programming languages and technologies. 
