--- a/index.html
+++ b/index.html
@@ -115,14 +115,14 @@
 								
 								<!-- APP #2 START-->
 								<p style="text-align: center;">
-									<strong>Point of Sale System (POS)</strong>
+									<strong>Point of Sale (POS) & Management System</strong>
 								</p>
 
-								<p></p>Music/movie rental shop application software.
+								<p></p>Music/Movie rental shop application software.
 								<span class="image main"><img src="images/mainscreenexample.jpg" alt="Main Screen Example" /></span>
 								
 								<p  style="text-align: justify; text-justify: inter-word;">
-									This project is a robust rental system, developed using Java and featuring an integrated Java Swing Graphical User Interface (GUI). 
+									This project is a robust rental and management system, developed using Java and featuring an integrated Java Swing Graphical User Interface (GUI). 
 									It’s backed by an SQL database, providing a solid foundation for data management. 
 									The system is designed with user-friendliness in mind, enabling rental shop staff to easily issue rents, view in-stock and rented titles, 
 									and manage customer and title records with functionalities to register, search, update, and delete entries.
