--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								
 								<p style="text-align: justify; text-justify: inter-word;">
 									I’m eager to transition from my role as a Graphic Designer to a Java Developer or other IT positions. 
-									My background in design is a valuable asset in application development, particularly in front-end development.
+									My background in design is a valuable asset in application development, being beneficial in user interface (UI) design and front-end development.
 								</p>
 								<p style="text-align: justify; text-justify: inter-word;">
 									During my college years, I gained experience in creating projects using various programming languages and technologies, 
