--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								</p>
 								
 								<p style="text-align: justify; text-justify: inter-word;">
-									I’m eager to transition from my role as a Graphic Designer to a Java Developer or other IT positions. 
+									I’m eager to transition from my role as a Graphic Designer to a Software/Web Developer or other IT positions. 
 									My background in design is a valuable asset in application development, being beneficial in user interface (UI) design and front-end development.
 								</p>
 								<p style="text-align: justify; text-justify: inter-word;">
