--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<!--<span class="icon fa-user"></span>-->
-							<img src="images/Everson_Spinola_Profile_Picture.jpg" alt="Profile Picture">
+							<span class="icon fa-user"></span>
+							<!--<img src="images/Everson_Spinola_Profile_Picture.jpg" alt="Profile Picture">-->
 						</div>
 						<div class="content">
 							<div class="inner">
