Update index.html fixed JRB image preview

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 								</p>
 								
 								<p></p>Client-facing static website for a beauty clinic.
-								<span class="image main"><img src="images/jessica-rossi-beauty-preview.jpg" alt="Jessica Rossi Beauty Website Preview" /></span>
+								<span class="image main"><img src="images/JRB-home-services-preview.png" alt="Jessica Rossi Beauty Website Preview" /></span>
 								
 								<p style="text-align: justify; text-justify: inter-word;">
 								    Jessica Rossi Beauty is a <b>responsive, mobile-friendly website</b> developed using <b>HTML, CSS, and JavaScript</b>, designed to showcase services and streamline appointment booking.
