Update index.html Ping Pong Releases Link

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 								
 								<p>
 								    To download and play the latest build (v2.9), 
-								    <a href="https://onedrive.live.com/?redeem=aHR0cHM6Ly8xZHJ2Lm1zL2YvYy8zNWE3M2NmYTUzZjk3ZWMyL0lnQmtuSnBKRXlPNVNxZ0JDVFZvakgzakFld1gtd2F1MFI3MWhvWFFSa0J1bVkwP2U9NnkyeHky&cid=35A73CFA53F97EC2&id=35A73CFA53F97EC2%21sbc220f68f63147e8a0175a43fb87bc3f&parId=35A73CFA53F97EC2%21s499a9c6423134ab9a8010935688c7de3&o=OneUp">
+								    <a href="https://github.com/eversoneder/Ping-Pong-Android-2D/releases/tag/v2.9">
 								    click here!
 								    </a>
 								</p>
@@ -290,5 +290,6 @@
 			<script src="assets/js/main.js"></script>
 	</body>
 </html>
+
 
 
